force-app/main/default/objects/Client_Address__c/Client_Address__c.object-meta.xml
<CustomObject>
    <label>Client Address</label>
    <nameField>
        <label>Line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>