force-app/main/default/objects/Client_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PUNE</fullName>
            </value>
            <value>
                <fullName>MUMBAI</fullName>
            </value>
            <value>
                <fullName>NAGPUR</fullName>
            </value>
            <value>
                <fullName>LUCKNOW</fullName>
            </value>
            <value>
                <fullName>SIWAN</fullName>
            </value>
            <value>
                <fullName>PATNA</fullName>
            </value>
            <value>
                <fullName>PANAJI</fullName>
            </value>
            <value>
                <fullName>BHOPAL</fullName>
            </value>
            <value>
                <fullName>HYDERABAD</fullName>
            </value>
            <value>
                <fullName>CYBERABAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>