force-app/main/default/objects/Client_Address__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Client Addresses</relationshipLabel>
    <relationshipName>Client_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>