force-app/main/default/objects/Client_Address__c/fields/CostofClientAddress__c.field-meta.xml
<CustomField>
    <fullName>CostofClientAddress__c</fullName>
    <label>CostofClientAddress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>