force-app/main/default/objects/Client_Address__c/fields/Line_2__c.field-meta.xml
<CustomField>
    <fullName>Line_2__c</fullName>
    <label>Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>