force-app/main/default/objects/Client_Address__c/validationRules/If_client_is_from_pune_and_client_is_vip.validationRule-meta.xml
<ValidationRule>
    <fullName>If_client_is_from_pune_and_client_is_vip</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( City__c , &apos;PUNE&apos;)   &amp;&amp;  Client__r.VIP__c = false</errorConditionFormula>
    <errorDisplayField>VIP__c</errorDisplayField>
    <errorMessage>Client isn&apos;t vip</errorMessage>
</ValidationRule>